xls/dslx/tests/errors/module_level_const_assert_failure.x
// Copyright 2023 The XLS Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

const TWO = u32:2;
const FOUR = u32:4;

// Add another constexpr binding to ensure it doesn't show up in the error
// message.
const SIX = u32:6;

const_assert!(TWO + TWO != FOUR);
